--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ nav .navigation ul li a.btn:hover {
     background-position: center;
     background-size: cover;
     animation: animate 10s ease-in-out infinite;
+    background-attachment: fixed;
 }
 
 @keyframes animate {
@@ -163,10 +164,164 @@ nav .navigation ul li a.btn:hover {
     border-radius: 10px;
     background: #002147;
     transition: all 0.3s ease;
+    font-weight: bold;
 }
 
 #introduction a:hover {
     background-color: white;
     border: 1px solid #002147;
     color: #002147;
+}
+
+/* Our Schools */
+#schools {
+    background: #002147;
+    padding: 8vw 8vw;
+    color: white;
+}
+
+#schools .wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 100px;
+}
+
+#schools .wrapper .item {
+    max-width: 500px;
+}
+
+#schools img {
+    width: 100%;
+    height: 400px;
+    box-shadow: 2px 5px 10px white;
+}
+
+#schools h1 {
+    text-align: center;
+    padding-bottom: 70px;
+    color: white;
+    font-size: 50px;
+    word-spacing: 10px;
+    font-family: 'U8', sans-serif;
+    
+}
+
+#schools h3 {
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 30px;
+    padding: 5px 10px;
+    background: radial-gradient( #002147, #0a4d9b);
+    max-width: 43%;
+    color: white;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+
+#schools .excess {
+    padding-left: 20px;
+}
+
+#schools p {
+    font-size: 18px;
+    line-height: 30px;
+    margin-bottom: 80px;
+}
+
+#schools a {
+    text-decoration: none;
+    color: #002147;
+    padding: 12px 24px;
+    background: white;
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border: none;
+    transition: all 0.3s ease;
+    font-weight: bold;
+    border: 1px solid #002147;
+
+}
+
+#schools a:hover {
+    background: rgba(255, 255, 255, 0.75);
+    cursor: pointer;
+}
+
+
+/* Activities */
+#activities {
+    padding: 8vw;
+    background: radial-gradient(white, rgb(248, 230, 230));
+    height: 32rem;
+}
+
+#activities .wrapper {
+    display: grid;
+    grid-template-columns: 40% 60%;
+}
+
+#activities .left {
+    margin-right: 50px;
+    color: #002147;
+}
+
+#activities h2 {
+    padding-bottom: 30px;
+    font-size: 40px;
+    font-family: 'U8', sans-serif;
+    font-weight: bold;
+}
+
+#activities .right {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+#activities .left p {
+    line-height: 22px;
+    padding-bottom: 50px;
+    font-size: 20px;
+    line-height: 35px;
+}
+
+#activities a {
+    text-decoration: none;
+    background: #002147;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 15px 30px;
+    color: white;
+    transition: all 0.3s ease;
+}
+
+#activities a:hover {
+    background: white;
+    border: 1px solid #002147;
+    color: #002147;
+}
+
+#activities article {
+    padding: 20px;
+    background: #013168;
+    border-radius: 10px;
+    color: white;
+}
+
+#activities img {
+    width: 50px;
+
+}
+
+#activities h4 {
+    padding: 10px 0;
+    font-weight: bold;
+    font-size: 17px;
+}
+
+/* Testimonial */
+#testimonial {
+    height: 400px;
+    background: #002147;
 }
