--- a/styles.css
+++ b/styles.css
@@ -36,12 +36,26 @@ h6 {
 }
 
 /* Navigation */
+
+.nav-cont {
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    background: radial-gradient(white, rgb(192, 190, 190));
+}
+
+.scroll {
+    background: #013168;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
     padding: 1vw 8vw;
     align-items: center;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
+    flex-wrap: wrap;
 }
 
 nav img {
@@ -72,24 +86,25 @@ nav .navigation ul li a:hover {
 }
 
 nav .navigation ul li a.btn {
-    background: #002147;
-    color: white;
+    background: white;
+    color: #002147;
     padding: 15px 30px;
     border-radius: 10px;
+    border: 1px solid #002147;
+
 }
 
 nav .navigation ul li a.btn:hover {
-    background: white;
-    color: #002147;
+    background: #002147;
+    color: white!important;
     opacity: 1;
     font-weight: bold;
-    border: 1px solid #002147;
 
 }
 
 /* Carousel */
 #carousel {
-    
+    margin-top: 80px;
     width: 100%;
     height: 80vh;
     background-position: center;
@@ -305,7 +320,7 @@ nav .navigation ul li a.btn:hover {
 #activities article {
     padding: 20px;
     background: #013168;
-    border-radius: 10px;
+    border-radius: 20px;
     color: white;
 }
 
@@ -324,4 +339,13 @@ nav .navigation ul li a.btn:hover {
 #testimonial {
     height: 400px;
     background: #002147;
+}
+
+#testimonial h1 {
+    font-family: 'U8', sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    padding-top: 140px;
+    text-align: center;
+    color: white;
 }
