--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ nav .navigation ul li a {
     font-size: 16px;
     font-weight: 700;
     transition: 0.5s ease;
+    font-family: 'U8', sans-serif;
 }
 
 nav .navigation ul li a:hover {
@@ -105,7 +106,7 @@ nav .navigation ul li a.btn:hover {
 /* Carousel */
 #carousel {
     margin-top: 80px;
-    width: 100%;
+    max-width: 100%;
     height: 80vh;
     background-position: center;
     background-size: cover;
@@ -134,6 +135,7 @@ nav .navigation ul li a.btn:hover {
 /* Introduction */
 #introduction {
     padding: 8vw;
+    background: radial-gradient(white, #87b8f0);
 }
 
 #introduction .wrapper {
@@ -144,18 +146,21 @@ nav .navigation ul li a.btn:hover {
 
 #introduction .wrapper .left {
     flex-basis: 50%;
+    min-width: 400px;
 }
 
 #introduction .right {
     flex-basis: 35%;
-    max-width: 600px;
+    min-width: 300px;
 }
 
 #introduction .right img {
-    width: 100%;
+    max-width: 100%;
     height: 400px;
-    border-radius: 10px;
-
+    border-radius: 20px;
+    border-bottom-right-radius: 100px;
+    box-shadow:   20px 20px 9px #495053,
+    -20px -20px 9px #edffff;
 }
 
 #introduction h1 {
@@ -203,13 +208,15 @@ nav .navigation ul li a.btn:hover {
 }
 
 #schools .wrapper .item {
-    max-width: 500px;
+    min-width: 500px;
 }
 
 #schools img {
-    width: 100%;
+    max-width: 100%;
     height: 400px;
-    box-shadow: 2px 5px 10px white;
+    box-shadow:   13px 13px 26px #798589,
+    -13px -13px 26px #bdd1d7;
+    
 }
 
 #schools h1 {
@@ -268,7 +275,7 @@ nav .navigation ul li a.btn:hover {
 #activities {
     padding: 8vw;
     background: radial-gradient(white, rgb(248, 230, 230));
-    height: 32rem;
+    max-height: 32rem;
 }
 
 #activities .wrapper {
@@ -336,12 +343,12 @@ nav .navigation ul li a.btn:hover {
 }
 
 /* Testimonial */
-#testimonial {
+#curriculum {
     height: 400px;
-    background: #002147;
+    background: #001a38;
 }
 
-#testimonial h1 {
+#curriculum h1 {
     font-family: 'U8', sans-serif;
     font-size: 50px;
     font-weight: bold;
