--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,8 @@ h6 {
     position: fixed;
     top: 0;
     z-index: 10;
-    background: radial-gradient(white, rgb(192, 190, 190));
+    background: radial-gradient(white, #87b8f0);
+
 }
 
 .scroll {
@@ -155,12 +156,13 @@ nav .navigation ul li a.btn:hover {
 }
 
 #introduction .right img {
-    max-width: 100%;
+    width: 100%;
     height: 400px;
     border-radius: 20px;
     border-bottom-right-radius: 100px;
     box-shadow:   20px 20px 9px #495053,
     -20px -20px 9px #edffff;
+    object-fit: cover;
 }
 
 #introduction h1 {
@@ -205,6 +207,7 @@ nav .navigation ul li a.btn:hover {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 100px;
+    align-items: center;
 }
 
 #schools .wrapper .item {
@@ -216,7 +219,7 @@ nav .navigation ul li a.btn:hover {
     height: 400px;
     box-shadow:   13px 13px 26px #798589,
     -13px -13px 26px #bdd1d7;
-    
+    object-fit: cover;
 }
 
 #schools h1 {
@@ -274,23 +277,25 @@ nav .navigation ul li a.btn:hover {
 /* Activities */
 #activities {
     padding: 8vw;
-    background: radial-gradient(white, rgb(248, 230, 230));
-    max-height: 32rem;
+    height: 60rem;
+    background: radial-gradient(white, #87b8f0);
+
 }
 
 #activities .wrapper {
-    display: grid;
-    grid-template-columns: 40% 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 }
 
 #activities .left {
-    margin-right: 50px;
     color: #002147;
+    text-align: center;
 }
 
-#activities h2 {
+#activities h1 {
     padding-bottom: 30px;
-    font-size: 40px;
+    font-size: 50px;
     font-family: 'U8', sans-serif;
     font-weight: bold;
 }
@@ -298,7 +303,31 @@ nav .navigation ul li a.btn:hover {
 #activities .right {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
+    gap: 40px;
+    z-index: 2;
+}
+
+#activities article {
+    padding: 20px;
+    background: #013168;
+    border-radius: 20px;
+    color: white;
+    max-width: 370px;
+    border-radius: 55px;
+    box-shadow:  9px 9px 0px #818e92,
+             -9px -9px 0px #b5c8ce;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+#activities article:nth-of-type(even){
+    border-radius: 0;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+}
+
+#activities article:hover {
+    box-shadow: none;
 }
 
 #activities .left p {
@@ -324,16 +353,8 @@ nav .navigation ul li a.btn:hover {
     color: #002147;
 }
 
-#activities article {
-    padding: 20px;
-    background: #013168;
-    border-radius: 20px;
-    color: white;
-}
-
 #activities img {
     width: 50px;
-
 }
 
 #activities h4 {
@@ -344,15 +365,56 @@ nav .navigation ul li a.btn:hover {
 
 /* Testimonial */
 #curriculum {
-    height: 400px;
     background: #001a38;
+    padding-bottom: 8vw;
+    position: relative;
+    
 }
 
 #curriculum h1 {
     font-family: 'U8', sans-serif;
     font-size: 50px;
     font-weight: bold;
-    padding-top: 140px;
+    padding-top: 160px;
     text-align: center;
     color: white;
+    padding-bottom: 50px;
 }
+
+
+#curriculum image {
+    border-radius: 50%;
+}
+
+#curriculum .swiper {
+    width: 950px;
+}
+
+#curriculum .wrapper{
+    
+}
+
+#curriculum .card {
+    background: white;
+    padding: 20px;
+    width: 100px;
+}
+
+#curriculum .container {
+    height: 15rem;
+}
+
+
+#curriculum .swiper-pagination {
+    position: absolute;
+    bottom: -20%;
+    
+}
+
+#curriculum .swiper-pagination-bullet{
+    background: red;
+    width: 20px;
+    height: 20px;
+}
+
+
