--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,8 @@ h6 {
     color: rgb(24, 24, 49);
 }
 
+
+
 /* Navigation */
 
 .nav-cont {
@@ -143,6 +145,7 @@ nav .navigation ul li a.btn:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 #introduction .wrapper .left {
@@ -319,7 +322,7 @@ nav .navigation ul li a.btn:hover {
     z-index: 2;
 }
 
-#activities article {
+#activities .article {
     padding: 20px;
     background: #013168;
     border-radius: 20px;
@@ -332,14 +335,47 @@ nav .navigation ul li a.btn:hover {
     cursor: pointer;
 }
 
-#activities article:nth-of-type(even){
+#activities .article:nth-of-type(even){
     border-radius: 0;
     border-top-right-radius: 50px;
     border-bottom-left-radius: 50px;
 }
 
-#activities article:hover {
+#activities .article:hover {
     box-shadow: none;
+}
+
+/* Animation */
+#activities .article:nth-child(2){
+    transition-delay: 400ms;
+}
+
+#activities .article:nth-child(3){
+    transition-delay: 800ms;
+}
+
+#activities .article:nth-child(4){
+    transition-delay: 1000ms;
+}
+
+#activities .article:nth-child(5){
+    transition-delay: 1200ms;
+}
+
+#activities .article:nth-child(6){
+    transition-delay: 1400ms;
+}
+
+.hidden {
+    opacity: 0;
+    transition: all 1.5s ease-in;
+    transform: translateX(-100%);
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
 }
 
 #activities .left p {
