--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,10 @@ nav img {
     cursor: pointer;
 }
 
+nav .navigation {
+    display: flex;
+}
+
 nav .navigation ul {
     display: flex;
     justify-content: flex-end;
@@ -163,8 +167,6 @@ nav .navigation ul li a.btn:hover {
     height: 400px;
     border-radius: 20px;
     border-bottom-right-radius: 100px;
-    box-shadow:   20px 20px 9px #495053,
-    -20px -20px 9px #edffff;
     object-fit: cover;
 }
 
@@ -233,8 +235,6 @@ nav .navigation ul li a.btn:hover {
 #schools img {
     max-width: 100%;
     height: 400px;
-    box-shadow:   13px 13px 26px #798589,
-    -13px -13px 26px #bdd1d7;
     object-fit: cover;
 }
 
@@ -329,11 +329,11 @@ nav .navigation ul li a.btn:hover {
     color: white;
     max-width: 370px;
     border-radius: 55px;
-    box-shadow:  9px 9px 0px #818e92,
-             -9px -9px 0px #b5c8ce;
     transition: all 0.3s ease;
     cursor: pointer;
 }
+
+
 
 #activities .article:nth-of-type(even){
     border-radius: 0;
@@ -430,25 +430,33 @@ nav .navigation ul li a.btn:hover {
 }
 
 
-#curriculum .image {
+/* #curriculum .image {
     width: 60px;
     height: 60px;
     border-radius: 50%;
     background: rgb(190, 189, 189);
     padding: 10px;
-}
+} */
 
 
 
-#curriculum .image img {
+#curriculum img {
     width: 100%;
+    height: 200px;
     color: white;
     fill: white;
+    border-top-left-radius: 29px;
+    border-top-right-radius: 29px;
 }
 #curriculum .swiper {
     width: 950px;
     min-height: 350px;
     transition: all 0.5s ease;
+}
+
+#curriculum .content {
+    padding: 20px;
+    margin-top: -20px;
 }
 
 #curriculum h3 {
@@ -457,12 +465,9 @@ nav .navigation ul li a.btn:hover {
 
 #curriculum .card {
     background: white;
-    min-height: 300px;
-    padding: 20px;
+    height: 400px;
     border-top-left-radius: 29px;
     border-top-right-radius: 29px;
-    box-shadow:  22px 22px 61px #8c9a9e,
-             -22px -22px 61px #abbcc2;
 }
 
 #curriculum .swiper-pagination-bullet {
@@ -736,4 +741,48 @@ nav .navigation ul li a.btn:hover {
     font-size: 25px;
     margin-right: 15px;
     cursor: pointer;
+}
+
+#menu-btn {
+    width: 30px;
+    height: 30px;
+    display: none;
+}
+
+#close-btn {
+    display: none;
+}
+
+@media (max-width: 769px){
+    nav {
+        padding: 15px 20px;
+    }
+
+    nav img {
+        width: 30px;
+    }
+
+    #menu-btn {
+        display: initial;
+    }
+    
+    #close-btn {
+        display: initial;
+    }
+    
+    nav .navigation ul {
+        
+    }
+    
+    nav .navigation ul li {
+        padding: 20px 0 30px 20px;
+    }
+
+    nav .navigation ul li a {
+        color: white!important;
+    }
+
+    nav .navigation ul li a.btn {
+        background: #002147;
+    }
 }
